--- a/src/app/features/clients/pages/client-form/client-form.html
+++ b/src/app/features/clients/pages/client-form/client-form.html
@@ -47,7 +47,7 @@
     </div>
     <input [disabled]="submitting || clientForm.invalid" type="submit" value="Guardar">
   </form>
-  @if (client) {
+  @if (client && renderChildren) {
     <app-accounts [client]="client"></app-accounts>
   }
 </app-single-item-layout>
